# merry-discord

./: .env.example  pyproject.toml
src/: db.py  discord.py  hattify.py  main.py  utils.py
